--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*#0D1C1E*/
 *{
 	padding: 0;
 	margin: 0;
@@ -28,6 +27,10 @@ input:focus, button:focus{
 	box-shadow: none;
 	border: none;
 }
+.menu{
+	width: 100%;
+	background: #0D1C1E;
+}
 .banner{
 	background-image: url(../images/background-1.png);
 	background-color: rgba(0,0,0,0.4);
@@ -35,7 +38,7 @@ input:focus, button:focus{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	height: 250px;
+	height: 280px;
 }
 .blog-content{
 	margin-bottom: 20px;
@@ -57,6 +60,16 @@ p.blog-footer{
 	width: 100%;
 	height: 200px;
 }
-
-
- /*style="background-image: url('assets/media/photos/background-.jpg'); background-color: rgba(0,0,0,0.3);"*/}
+.expert{
+	background: url(../images/farmers.jpg);
+	background-color: rgba(0,0,0,0.6);
+	background-blend-mode: overlay;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+}
+.expert form button{
+	width: 48% !important;
+	float: left;
+	margin-left: 10px;
+}
